fix: починен z-index

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -24,6 +24,8 @@
 
   .menu {
     @include flex(row, flex-start, center);
+    z-index: 10;
+
     gap: 40px;
 
     list-style: none;
